[project]
name = "semantic-book-recommender"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "gradio>=6.3.0",
    "ipywidgets>=8.1.8",
    "kagglehub>=0.4.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "matplotlib>=3.10.8",
    "notebook>=7.5.2",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
    "transformers>=4.57.6",
]
